--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_DATABASE=pgsqlproject
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_DATABASE=php
+DB_USERNAME=Intelect_Auto
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
