--- a/.env.example
+++ b/.env.example
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_DATABASE=php
-DB_USERNAME=Intelect_Auto
+DB_PORT=3306
+DB_DATABASE=intellect_Auto
+DB_USERNAME=root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
